--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,7 +12,7 @@ analyzer:
     undefined_function: error
     undefined_method: error
     undefined_class: error
-    missing_js_lib_annotation: ignore
+    uses_dynamic_as_bottom: ignore
 # Unfortunately it does not work now in the cli mode: https://github.com/dart-lang/sdk/issues/26212
 #  exclude:
 #    - lib/**.g.dart
