--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: logging_service
-version: 3.1.0
+version: 3.1.1
 description: The service for advanced work with logging
 authors:
   - Ivan Evsikov <ivan.evsikov@team.wrike.com>
@@ -19,7 +19,8 @@ dev_dependencies:
   mockito: ^2.0.0
   quiver: '>=0.21.4 < 1.0.0'
   dart_dev: ^1.7.2
-  dart_style: ^1.0.7
+  #TODO: disabled because we can not resolve dependencies with it
+  #dart_style: ^1.0.7
 
 transformers:
   - test/pub_serve:
