--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,10 +12,8 @@ analyzer:
     undefined_function: error
     undefined_method: error
     undefined_class: error
-    uses_dynamic_as_bottom: ignore
-# Unfortunately it does not work now in the cli mode: https://github.com/dart-lang/sdk/issues/26212
-#  exclude:
-#    - lib/**.g.dart
+  exclude:
+    - lib/**.g.dart
 
 linter:
   rules:
@@ -55,6 +53,6 @@ linter:
     - throw_in_finally
     - type_annotate_public_apis
     - type_init_formals
-    - unnecessary_brace_in_string_interp
+    #- unnecessary_brace_in_string_interp
     - unnecessary_getters_setters
     - unrelated_type_equality_checks
