--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,11 @@ dependencies:
   stack_trace: ^1.8.0
 
 dev_dependencies:
-#  build_runner: '>=0.9.1 < 2.0.0'
-#  build_test: '>=0.10.2 < 2.0.0'
-#  build_web_compilers: '>=0.4.0 < 2.0.0'
-  test: ^1.2.0
-  coverage: '>=0.12.1 < 1.0.0'
-  mockito: '>=3.0.0-beta+1 < 4.0.0'
-  quiver: '>=0.29.0 < 1.0.0'
-  dart_dev: ^1.7.2
+  test: '>=0.12.15 < 2.0.0'
+  coverage: '>=0.7.9 < 2.0.0'
+  mockito: '>=2.0.0 < 4.0.0'
+  quiver: '>=0.21.4 < 2.0.0'
+  dart_dev: '>=1.7.2 < 3.0.0'
   #TODO: disabled because we can not resolve dependencies with it
   #dart_style: ^1.0.7
 
