--- a/.travis.yml
+++ b/.travis.yml
@@ -5,42 +5,21 @@ addons:
 matrix:
   include:
     - dart: dev
-      dart_task:
-        dartanalyzer: --fatal-warnings lib/ test/
+      script:
+        - dartanalyzer --fatal-warnings lib/ test/
     - dart: dev
-      dart_task:
-        dartfmt: --set-exit-if-changed -l 120 -n .
-#TODO: enable after Dart 2 release
-#    - dart: dev
-#      script:
-#        - pub run dart_dev analyze
-#        #TODO: disabled because we can not resolve dependencies with dart_style: ^1.0.7
-#        #- pub run dart_dev format --check
+      script:
+        - dartfmt --set-exit-if-changed -l 120 -n .
     - dart: dev
       dart_task:
         test: --platform firefox -j 1
     - dart: dev
       dart_task:
         test: --platform chrome
-    - dart: stable
+    - dart: dev
       script:
-        - pub run dart_dev analyze
-    - dart: stable
-      dart_task:
-        test: --platform chrome
-    - dart: 1.24.2
-      dart_task:
-        test: --platform dartium
-        install_dartium: true
-    - dart: 1.24.2
-      with_content_shell: true
-      before_install:
-        - export DISPLAY=:99.0
-        - sh -e /etc/init.d/xvfb start
-        - sleep 3
-      script:
-        - pub run dart_dev coverage --no-html
-        - bash <(curl -s https://codecov.io/bash) -f coverage/coverage.lcov
+        - pub run dart_codecov_generator --report-on=lib/ --no-html --verbose
+        - bash <(curl -s https://codecov.io/bash)
 # Only building master means that we don't run two builds for each pull request.
 branches:
   only: [master]
