--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,7 @@
 analyzer:
-#  strong-mode:
-#    implicit-casts: false
-#    implicit-dynamic: false
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
   errors:
     unused_local_variable: error
     invalid_assignment: error
