--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
   include:
     - dart: dev
       script:
-        - dartanalyzer --fatal-warnings lib/ test/
+        - dartanalyzer --fatal-infos --fatal-lints --fatal-warnings lib/ test/
     - dart: dev
       script:
         - dartfmt --set-exit-if-changed -l 120 -n .
@@ -16,9 +16,18 @@ matrix:
     - dart: dev
       dart_task:
         test: --platform chrome
+#    - dart: dev
+#      script:
+#        - pub run dart_dev coverage --no-html --no-open
+#        - bash <(curl -s https://codecov.io/bash) -f coverage/coverage.lcov
     - dart: dev
       script:
-        - pub run dart_codecov_generator --report-on=lib/ --no-html --verbose
+        - pub get --packages-dir
+        - pub global activate coverage
+        - pub global run coverage:collect_coverage --port=8111 -o coverage.json --resume-isolates --wait-paused &
+        - dart --observe=8111 test/coverage.dart
+        - pub global run coverage:format_coverage --package-root=packages --report-on lib --in coverage.json --out lcov.info --lcov
+      after_success:
         - bash <(curl -s https://codecov.io/bash)
 # Only building master means that we don't run two builds for each pull request.
 branches:
