--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   coverage: '>=0.7.9 <2.0.0'
   mockito: '>=3.0.0-beta+1 <4.0.0'
   quiver: '>=0.21.4 <2.0.0'
+  dart_dev: '>=1.7.2'
 
 transformers:
   - test/pub_serve:
