--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dev_dependencies:
   mockito: '>=3.0.0-beta+1 <4.0.0'
   quiver: '>=0.21.4 <2.0.0'
   dart_dev: '>=1.7.2'
+  build_runner: '>=0.9.1 <2.0.0'
+  build_test: '>=0.10.2 <2.0.0'
+  build_web_compilers: '>=0.4.0 <2.0.0'
 
 transformers:
   - test/pub_serve:
