--- a/.travis.yml
+++ b/.travis.yml
@@ -6,31 +6,24 @@ matrix:
   include:
     - dart: dev
       script:
-        - pub run dart_dev analyze
-        #TODO: disabled because we can not resolve dependencies with dart_style: ^1.0.7
-        #- pub run dart_dev format --check
+        - dartanalyzer --fatal-infos --fatal-lints --fatal-warnings lib/ test/
+    - dart: dev
+      script:
+        - dartfmt --set-exit-if-changed -l 120 -n .
     - dart: dev
       dart_task:
         test: --platform firefox -j 1
     - dart: dev
       dart_task:
         test: --platform chrome
-    - dart: stable
-      script:
-        - pub run dart_dev analyze
-    - dart: stable
-      dart_task:
-        test: --platform dartium
-        install_dartium: true
-    - dart: stable
-      with_content_shell: true
-      before_install:
-        - export DISPLAY=:99.0
-        - sh -e /etc/init.d/xvfb start
-        - sleep 3
-      script:
-        - pub run dart_dev coverage --no-html
-        - bash <(curl -s https://codecov.io/bash) -f coverage/coverage.lcov
+    #TODO: does not work
+#    - dart: dev
+#      script:
+#        - pub run dart_dev coverage
+#        - bash <(curl -s https://codecov.io/bash) -f coverage/coverage.lcov
+# Only building master means that we don't run two builds for each pull request.
+branches:
+  only: [master]
 cache:
   directories:
     - $HOME/.pub-cache
