--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: logging_service
-version: 3.2.1
+version: 3.2.2
 description: The service for advanced work with logging
 authors:
   - Ivan Evsikov <ivan.evsikov@team.wrike.com>
 homepage: https://github.com/wrike/logging_service
 environment:
-  sdk: '>=1.21.1 <2.0.0'
+  sdk: '>=1.21.1 <3.0.0'
 
 dependencies:
   logging: ^0.11.0
@@ -14,13 +14,14 @@ dependencies:
   stack_trace: ^1.8.0
 
 dev_dependencies:
-  test: ^0.12.15
-  coverage: '>=0.7.9 < 1.0.0'
-  mockito: ^2.0.0
-  quiver: '>=0.21.4 < 1.0.0'
-  dart_dev: ^1.7.2
-  #TODO: disabled because we can not resolve dependencies with it
-  #dart_style: ^1.0.7
+  test: '>=0.12.15 <2.0.0'
+  coverage: '>=0.7.9 <2.0.0'
+  mockito: '>=3.0.0-beta+1 <4.0.0'
+  quiver: '>=0.21.4 <2.0.0'
+  dart_dev: '>=1.7.2'
+  build_runner: '>=0.9.1 <2.0.0'
+  build_test: '>=0.10.2 <2.0.0'
+  build_web_compilers: '>=0.4.0 <2.0.0'
 
 transformers:
   - test/pub_serve:
