--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ addons:
   chrome: stable
 matrix:
   include:
-    - dart: dev
-      script:
-        - dartanalyzer --fatal-infos --fatal-lints --fatal-warnings lib/ test/
+# Disabled because of https://github.com/dart-lang/sdk/issues/35003
+#    - dart: dev
+#      script:
+#        - dartanalyzer --fatal-infos --fatal-lints --fatal-warnings lib/ test/
     - dart: dev
       script:
         - dartfmt --set-exit-if-changed -l 120 -n .
@@ -14,6 +15,15 @@ matrix:
       dart_task:
         test: --platform firefox -j 1
     - dart: dev
+      dart_task:
+        test: --platform chrome
+    - dart: stable
+      script:
+        - dartanalyzer --fatal-infos --fatal-lints --fatal-warnings lib/ test/
+    - dart: stable
+      dart_task:
+        test: --platform firefox -j 1
+    - dart: stable
       dart_task:
         test: --platform chrome
     #TODO: does not work
