--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: logging_service
-version: 3.3.0
+version: 3.4.0
 description: The service for advanced work with logging
 authors:
   - Ivan Evsikov <ivan.evsikov@team.wrike.com>
@@ -14,11 +14,11 @@ dependencies:
   stack_trace: ^1.8.0
 
 dev_dependencies:
-  test: '>=0.12.15 <2.0.0'
-  coverage: '>=0.7.9 <2.0.0'
-  mockito: '>=3.0.0-beta+1 <4.0.0'
-  quiver: '>=0.21.4 <2.0.0'
-  dart_dev: '>=1.7.2'
-  build_runner: '>=0.9.1 <2.0.0'
-  build_test: '>=0.10.2 <2.0.0'
-  build_web_compilers: '>=0.4.0 <2.0.0'
+  test: ^1.3.3
+  coverage: ^0.13.6
+  mockito: ^3.0.0-beta+1
+  quiver: ^2.0.0+1
+  dart_dev: ^3.3.0
+  build_runner: ^1.7.4
+  build_test: ^0.10.2+1
+  build_web_compilers: ^2.9.0
