--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -46,7 +46,7 @@ linter:
     - prefer_is_not_empty
     # - public_member_api_docs
     #- slash_for_doc_comments
-    - sort_constructors_first
+    #- sort_constructors_first
     - sort_unnamed_constructors_first
     - super_goes_last
     - test_types_in_equals
